NodeUpgradeDowngrade: Release -> Configuration renaming - finished, Mock resources

--- a/KlusterKite.NodeManager/KlusterKite.NodeManager.ConfigurationSource/KlusterKite.NodeManager.ConfigurationSource.csproj
+++ b/KlusterKite.NodeManager/KlusterKite.NodeManager.ConfigurationSource/KlusterKite.NodeManager.ConfigurationSource.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
   
   <ItemGroup>
-    <Compile Update="ReleaseExtensions.cs">
+    <Compile Update="ConfigurationExtensions.cs">
       <ExcludeFromStyleCop>true</ExcludeFromStyleCop>
     </Compile>
   </ItemGroup>
