--- a/Docker/KlusterKiteManager/fallBackConfiguration.json
+++ b/Docker/KlusterKiteManager/fallBackConfiguration.json
@@ -1,7 +1,7 @@
 {
   "Configuration": "{\n   KlusterKite {\n    NodeManager.ConfigurationDatabaseConnectionString = \"User ID=postgres;Host=configDb;Port=5432;Pooling=true\"\n    NodeManager.ConfigurationDatabaseName = \"KlusterKite.NodeManagerConfiguration\"\n    NodeManager.ConfigurationDatabaseProviderName = \"Npgsql\"\n    NodeManager.PackageRepository = \"http://nuget/\"\n\tNodeManager.DefaultNugetFeeds {\n      privateFeed {\n              address = \"http://nuget/\"\n              type = private\n      }          \n    }  \n  }\n}",
   "NodeTemplate": "clusterManager",
-  "ReleaseId": 1,
+  "ConfigurationId": 1,
   "Packages": [
     {
       "Id": "Akka",
