NodeUpgradeDowngrade: refactored the resource migration process

--- a/KlusterKite.NodeManager/KlusterKite.NodeManager.Migrator/KlusterKite.NodeManager.Migrator.csproj
+++ b/KlusterKite.NodeManager/KlusterKite.NodeManager.Migrator/KlusterKite.NodeManager.Migrator.csproj
@@ -19,4 +19,7 @@
   <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
     <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
   </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\KlusterKite.API\KlusterKite.API.Attributes\KlusterKite.API.Attributes.csproj" />
+  </ItemGroup>
 </Project>
